--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 8080
 MONGO_URL = mongodb+srv://techkrisharun11:TqCkaiWjocjiBAST@cluster0.ob262sw.mongodb.net/Ecommerce
+JWT_SECRET = HDNKOEASLJ@#%%484JDNSAJ
